finalizando correção de bugs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
     <string name="text_my_anotation">Adicionar Anotações</string>
     <string name="text_not_found">Nenhuma Anotação Encontrada</string>
     <string name="text_not_found_service">Error na comunicação com o servidor!</string>
+    <string name="atualizar">Atualizar</string>
+    <string name="cancelar">Cancelar</string>
+    <string name="carregando">Carregando...</string>
+    <string name="nao">Não</string>
+    <string name="sim">Sim</string>
+    <string name="deseja_excluir">DESEJA EXCLUIR?</string>
 </resources>
